# Base

./: CMakeLists.txt  apphandler.cpp  apphandler.hpp  base.hpp  out.json
file/: filefunc.cpp  filefunc.hpp  resourcehandler.cpp  resourcehandler.hpp  zipfunc.cpp  zipfunc.hpp
input/: keyboardfunc.cpp  keyboardfunc.hpp  mousefunc.cpp  mousefunc.hpp
render/: color.hpp  drawfunc.cpp  drawfunc.hpp  font.cpp  font.hpp  image.cpp  image.hpp  shader.cpp  shader.hpp
res/: hello.json
res/shaders/: texture.glsl
src/: apphandler.cpp  apphandler.hpp  base.hpp  common.hpp  typedefs.hpp
src/file/: directorypath.cpp  directorypath.hpp  file.hpp  filefunc.cpp  filefunc.hpp  filepath.cpp  filepath.hpp  json.cpp  json.hpp  resource.hpp  resourcehandler.cpp  resourcehandler.hpp  zipfunc.cpp  zipfunc.hpp
src/input/: keyboardfunc.cpp  keyboardfunc.hpp  mousefunc.cpp  mousefunc.hpp
src/render/: color.hpp  colors.hpp  drawfunc.cpp  drawfunc.hpp  font.cpp  font.hpp  image.cpp  image.hpp  renderfunc.cpp  renderfunc.hpp  rendertarget.cpp  rendertarget.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp
src/resource/: font.cpp  font.hpp  image.cpp  image.hpp  model.cpp  model.hpp  obj.cpp  obj.hpp  resource.cpp  resource.hpp  resourcehandler.cpp  resourcehandler.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  testscene.cpp  testscene.hpp
src/scene/: camera.cpp  camera.hpp  light.cpp  light.hpp  material.cpp  material.hpp  model.cpp  model.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  trianglemesh.cpp  trianglemesh.hpp  volume.hpp
src/util/: datefunc.cpp  datefunc.hpp  limit.hpp  mathfunc.hpp  stringfunc.cpp  stringfunc.hpp  timer.cpp  timer.hpp  utilfunc.hpp
src/util/data/: list.hpp  mat4.hpp  mat4x4.hpp  region2d.hpp  size2d.hpp  size3d.hpp  tex2.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vertex2d.hpp  vertex3d.hpp
src/util/math/: mat4x4.hpp  mathfunc.hpp  vec2.hpp  vec3.hpp
src/window/: dialogfunc.cpp  dialogfunc.hpp  screenarea.hpp  screenpos.hpp  window.cpp  window.hpp
test/: main.cpp  test.cpp  test.hpp  testdraw.cpp  testdraw.hpp  testjson.cpp  testjson.hpp  testrender.hpp  testscene.cpp  testwindow.hpp
test/res/: hello.json
test/res/scenes/: checker.testscene  chess.testscene  house-interior.testscene  sponza.testscene  torus.testscene
test/res/shaders/: blur.glsl  csm.glsl  depth.glsl  normals.glsl  shadows.glsl  test.glsl  texture.glsl
util/: datefunc.hpp  stringfunc.cpp  stringfunc.hpp  utilfunc.hpp
util/math/: mat4x4.hpp  mathfunc.hpp  vec2.hpp  vec3.hpp
window/: dialogfunc.cpp  dialogfunc.hpp  mousefunc.cpp  mousefunc.hpp  screenarea.hpp  screenpos.hpp  window.cpp  window.hpp
